[package]
name = "tor-router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1.34",  features = ["full", "signal"] }
serde       = { version = "1.0",   features = ["derive"] }
serde_json  = "1.0"
toml        = "0.8"
axum        = "0.6"
tower-http  = { version = "0.4",   features = ["fs"] }
reqwest     = { version = "0.11",  features = ["socks", "json"] }
regex       = "1.10"
parking_lot = "0.12"
rusqlite    = { version = "0.31",  features = ["bundled"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
